Fix alert not showing in the rating field of review form; Add admin model for ReviewRating

--- a/greatkart/static/css/custom.css
+++ b/greatkart/static/css/custom.css
@@ -1,6 +1,8 @@
 /* Hide Radio button */
 .rate > input{
-    display: none;
+    opacity: 0;
+    position: absolute;
+    z-index: -1;
 }
 
 .rate{
